# soroban-webauthn

./: Makefile  README.md  account.js  credential.js  credential_create.js  deploy.js  effects.js  fund.js  index.html  index.js  init.js  refund.js  style.css  ui.js
.github/workflows/: bump.yml  deploy.yml
contract/: Cargo.toml
contract-ed25519/: Cargo.toml
contract-ed25519-factory/: Cargo.toml
contract-ed25519-factory/src/: lib.rs
contract-ed25519/src/: lib.rs  test.rs
contract-ed25519/src/test/: integration.rs  unit.rs
contract-factory/: Cargo.toml
contract-secp256r1/: Cargo.toml
contract-secp256r1/src/: lib.rs
contract-webauthn-ed25519/: Cargo.toml
contract-webauthn-ed25519/src/: lib.rs
contract-webauthn-factory/: Cargo.toml
contract-webauthn-secp256r1/: Cargo.toml
contract-webauthn-secp256r1/src/: lib.rs  secp256r1.rs
contract/src/: lib.rs
verifier/: main.go
verifier-ecdsa-p256/: main.go
verifier-eddsa-ed25519/: main.go
web-app-demo/: bundler.js  contract.js  credential.js  credential_create.js  deploy.js  fund.js  hash.js  index.html  init.js  logs.js  refund.js  tx.js  ui.js
