[package]
name = "test_ecdsa_p256"
version = "0.1.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.72"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = {version = "20.0.0-rc2"}
p256 = {version = "0.13.2", default-features = false, features = ["ecdsa-core"]}

[dev-dependencies]
soroban-sdk = {version = "20.0.0-rc2", features = ["testutils"]}
