[package]
name = "test_ecdsa_p256"
version = "0.1.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.72"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
p256 = {version = "0.13.2", default-features = false, features = ["ecdsa"]}
soroban-sdk = "20.0.0-rc2"

# # ecdsa is a transitive dependency via p256. It is imported explicitly so that
# # we can control the features enabled.
# ecdsa = { version = "0.16", default-features = false, features = ["der", "verifying"] }

[dev-dependencies]
soroban-sdk = {version = "20.0.0-rc2", features = ["testutils"]}
